# light_stm

./: .gitignore  CMakeLists.txt  CMakeListsSTM32.cmake  CMakeListsSTM8.cmake  CMakeSettings.json  build.sh  compile.sh  flash.sh  gdb.bat  openocd.bat
_cfg/: calendar_cfg.h  trace_cfg.c  trace_cfg.h
adapt_stm32/: calendar.c  flash.c  hal.c  interrupts.c  timer.c  uart.c
adapt_stm32/CMSIS/device/: startup_stm32f103xe.s  stm32f103xe.h  system_stm32f1xx.c
adapt_stm32/LinkerScript/: stm32f103x8.ld
adapt_stm8/: calendar.c  flash.c  hal.c  interrupts.c  stm8l.h  timer.c  uart.c
cmake/: Toolchain-gcc.cmake  Toolchain-sdcc.cmake
inc/: stm8l.h
src/: calendar.c  flash.c  interrupts.c  main.c  sun.c  timer.c  uart.c
src/_com/: calendar_com.h  flash_com.h  hal_com.h  led_com.h  sun_com.h  trace_com.h  trace_out.h
